# zendesk-api-rust

./: Cargo.toml  LICENSE  README.md
examples/: README.md  advanced_search.rs  basic_search.rs  create_tickets.rs  custom_objects.rs  debug_complex_user.rs  debug_user_creation.rs  fetch_organizations.rs  fetch_tickets.rs  fetch_users.rs  graph_relationships.rs  manage_users.rs  post_comments.rs  simple_comment_example.rs  test_api.rs  ticket_comments.rs  update_tickets.rs
src/: auth.rs  client.rs  config.rs  errors.rs  lib.rs
src/endpoints/: custom_objects.rs  mod.rs  organizations.rs  relationships.rs  search.rs  tickets.rs  users.rs
src/models/: custom_object.rs  mod.rs  organization.rs  relationship.rs  search.rs  ticket.rs  user.rs
src/query/: mod.rs  pagination.rs  query.rs  sideloading.rs
