[package]
name = "zendesk-api-rust"
version = "0.1.0"
edition = "2024"
description = "Rust API client for Zendesk ticketing system"
authors = ["Oliver T. Herman <dev@oliverherman.com>"]
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "2.0"
url = "2.0"
base64 = "0.22"
